# flashcards-app

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/workflows/: checks.yml
api/: serializer.py  serializers.py  urls.py  views.py
backend/: pytest.ini  requirements.txt  runner.py  settings.py  urls.py
backend/config/: settings.py  test_settings.py  urls.py
backend/docker/: Dockerfile
backend/tests/: factories.py
cards/: admin.py  api_views.py  apps.py  forms.py  models.py  rest_views.py  serializer.py  services.py  signals.py  urls.py  views.py
cards/migrations/: 0001_initial.py  0002_category_price_word_user.py  0002_user_name_alter_user_email.py  0002_word_category_word_word_created_word_updated.py  0003_remove_user_name_alter_user_username.py  0003_word_status.py  0004_alter_word_status.py  0004_user_name_alter_user_username.py  0005_category_user_alter_user_score.py  0005_remove_ranking_ranking_list_ranking_ranking_name_and_more.py  0006_alter_word_options_remove_user_email_and_more.py  0006_ranking.py  0006_remove_category_user_category_users.py  (+7 more)
dictionary/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  navbar.html
tesss/: 0003_alter_word_category_word_alter_word_created_and_more.py  0004_user_answer.py  0005_user_profile_picture_alter_answer_knowledge.py
tests/: factories.py
translations/: admin.py  apps.py  models.py
user_None/: IMG_5153.HEIC
users/: apps.py  models.py  signals.py
(+45 files in other folders)
