[tool.poetry]
name = "flashcards-app"
version = "0.1.0"
description = ""
authors = ["kwiats <pawuskwiatkowski@gmail.com>"]
readme = "README.md"
packages = [{include = "flashcards_app"}]

[tool.poetry.dependencies]
python = "3.8.6"
Django = "^4.1.4"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
drf-spectacular = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
